fix nav bar not opening on mobile and add nav links

--- a/portfolio-2.0/src/app/globals.css
+++ b/portfolio-2.0/src/app/globals.css
@@ -101,7 +101,6 @@ body {
   position: absolute;
   left: 0;
   top: 40%;
-  z-index: 50;
   margin-left: 10px;
 }
 
@@ -109,7 +108,6 @@ body {
   position: absolute;
   right: 0;
   top: 40%;
-  z-index: 50;
   margin-right: 10px;
 }
 
